simplifies data.frame method approach by using mutate, figured we can get any vector optimization for free

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,6 @@ export(llm_sentiment)
 export(llm_summarize)
 import(glue)
 import(rlang)
-importFrom(dplyr,pull)
+importFrom(dplyr,mutate)
 importFrom(ollamar,chat)
 importFrom(purrr,map_chr)
