--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 S3method(llm_sentiment,"tbl_Spark SQL")
 S3method(llm_sentiment,character)
 S3method(llm_sentiment,data.frame)
+S3method(llm_summarize,"tbl_Spark SQL")
+S3method(llm_summarize,character)
+S3method(llm_summarize,data.frame)
 export(llm_generate)
 export(llm_sentiment)
 export(llm_summarize)
