--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(l_generate,list)
 S3method(l_generate,ollama)
+S3method(llm_extract,character)
 S3method(llm_sentiment,"tbl_Spark SQL")
 S3method(llm_sentiment,character)
 S3method(llm_sentiment,data.frame)
@@ -9,6 +10,7 @@ S3method(llm_summarize,"tbl_Spark SQL")
 S3method(llm_summarize,character)
 S3method(llm_summarize,data.frame)
 export(l_generate)
+export(llm_extract)
 export(llm_generate)
 export(llm_sentiment)
 export(llm_summarize)
