Renames to llm_vec_genarate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,11 +11,12 @@ S3method(llm_summarize,character)
 S3method(llm_summarize,data.frame)
 export(l_generate)
 export(llm_extract)
-export(llm_generate)
 export(llm_sentiment)
 export(llm_summarize)
+export(llm_vec_generate)
 import(glue)
 import(rlang)
 importFrom(dplyr,mutate)
+importFrom(dplyr,tibble)
 importFrom(ollamar,chat)
 importFrom(purrr,map_chr)
