--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,10 @@ export(llm_summarize)
 export(llm_vec_generate)
 import(glue)
 import(rlang)
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,mutate)
 importFrom(dplyr,tibble)
-importFrom(ollamar,chat)
+importFrom(ollamar,generate)
+importFrom(ollamar,test_connection)
 importFrom(purrr,map_chr)
+importFrom(purrr,map_df)
