--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(llm_backend_generate,list)
 S3method(llm_backend_generate,ollama)
+S3method(llm_classify,data.frame)
 S3method(llm_custom,data.frame)
 S3method(llm_extract,data.frame)
 S3method(llm_sentiment,"tbl_Spark SQL")
@@ -9,6 +10,7 @@ S3method(llm_sentiment,data.frame)
 S3method(llm_summarize,"tbl_Spark SQL")
 S3method(llm_summarize,data.frame)
 export(llm_backend_generate)
+export(llm_classify)
 export(llm_custom)
 export(llm_extract)
 export(llm_sentiment)
