Adds llm_init()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,9 +13,11 @@ export(llm_backend_generate)
 export(llm_classify)
 export(llm_custom)
 export(llm_extract)
+export(llm_init)
 export(llm_sentiment)
 export(llm_summarize)
 export(llm_vec_generate)
+import(cli)
 import(glue)
 import(rlang)
 importFrom(dplyr,bind_cols)
