Menu selection presented if multiple models found, if one model found, it automatically selected

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,6 @@ importFrom(dplyr,bind_cols)
 importFrom(dplyr,mutate)
 importFrom(dplyr,tibble)
 importFrom(ollamar,generate)
+importFrom(ollamar,list_models)
 importFrom(ollamar,test_connection)
 importFrom(purrr,map_chr)
-importFrom(purrr,map_df)
