Renames llm_vec_generate to llm_vec_custom

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,7 @@ export(llm_extract)
 export(llm_init)
 export(llm_sentiment)
 export(llm_summarize)
-export(llm_vec_generate)
+export(llm_vec_custom)
 export(mall_backend_generate)
 export(mall_backend_prompt)
 import(cli)
