Adds vec sentiment, fixes error in vec custom

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(llm_init)
 export(llm_sentiment)
 export(llm_summarize)
 export(llm_vec_custom)
+export(llm_vec_sentiment)
 export(mall_backend_generate)
 export(mall_backend_prompt)
 import(cli)
