Adds valid_resps to classify, and creates its vec function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(llm_extract)
 export(llm_init)
 export(llm_sentiment)
 export(llm_summarize)
+export(llm_vec_classify)
 export(llm_vec_custom)
 export(llm_vec_sentiment)
 export(mall_backend_generate)
