Adds vec summarize

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(llm_summarize)
 export(llm_vec_classify)
 export(llm_vec_custom)
 export(llm_vec_sentiment)
+export(llm_vec_summarize)
 export(mall_backend_generate)
 export(mall_backend_prompt)
 import(cli)
