Adds vec extract

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(llm_sentiment)
 export(llm_summarize)
 export(llm_vec_classify)
 export(llm_vec_custom)
+export(llm_vec_extract)
 export(llm_vec_sentiment)
 export(llm_vec_summarize)
 export(mall_backend_generate)
