--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(llm_sentiment,"tbl_Spark SQL")
 S3method(llm_sentiment,data.frame)
 S3method(llm_summarize,"tbl_Spark SQL")
 S3method(llm_summarize,data.frame)
+S3method(llm_translate,data.frame)
 S3method(mall_backend_generate,ollama)
 S3method(mall_backend_prompt,mall_defaults)
 export(llm_classify)
@@ -15,11 +16,13 @@ export(llm_extract)
 export(llm_init)
 export(llm_sentiment)
 export(llm_summarize)
+export(llm_translate)
 export(llm_vec_classify)
 export(llm_vec_custom)
 export(llm_vec_extract)
 export(llm_vec_sentiment)
 export(llm_vec_summarize)
+export(llm_vec_translate)
 export(mall_backend_generate)
 export(mall_backend_prompt)
 import(cli)
