--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,3 +35,5 @@ importFrom(ollamar,generate)
 importFrom(ollamar,list_models)
 importFrom(ollamar,test_connection)
 importFrom(purrr,map_chr)
+importFrom(purrr,map_df)
+importFrom(utils,menu)
