Creates print method for defaults, which allows init to return an object

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(llm_summarize,data.frame)
 S3method(llm_translate,data.frame)
 S3method(mall_backend_generate,ollama)
 S3method(mall_backend_prompt,mall_defaults)
+S3method(print,mall_defaults)
 export(llm_classify)
 export(llm_custom)
 export(llm_extract)
