Renames mall_backend functions to m_backend, this should keep the autocomplete cleaner

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,8 @@ S3method(llm_sentiment,data.frame)
 S3method(llm_summarize,"tbl_Spark SQL")
 S3method(llm_summarize,data.frame)
 S3method(llm_translate,data.frame)
-S3method(mall_backend_generate,ollama)
-S3method(mall_backend_prompt,mall_defaults)
+S3method(m_backend_generate,ollama)
+S3method(m_backend_prompt,mall_defaults)
 S3method(print,mall_defaults)
 export(llm_classify)
 export(llm_custom)
@@ -24,8 +24,8 @@ export(llm_vec_extract)
 export(llm_vec_sentiment)
 export(llm_vec_summarize)
 export(llm_vec_translate)
-export(mall_backend_generate)
-export(mall_backend_prompt)
+export(m_backend_generate)
+export(m_backend_prompt)
 import(cli)
 import(glue)
 import(rlang)
