renames llm_init to mall_init to keep autocomplete cleaner

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,6 @@ S3method(print,mall_defaults)
 export(llm_classify)
 export(llm_custom)
 export(llm_extract)
-export(llm_init)
 export(llm_sentiment)
 export(llm_summarize)
 export(llm_translate)
@@ -26,6 +25,7 @@ export(llm_vec_summarize)
 export(llm_vec_translate)
 export(m_backend_generate)
 export(m_backend_prompt)
+export(mall_init)
 import(cli)
 import(glue)
 import(rlang)
