--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(llm_extract)
 export(llm_sentiment)
 export(llm_summarize)
 export(llm_translate)
+export(llm_use)
 export(llm_vec_classify)
 export(llm_vec_custom)
 export(llm_vec_extract)
@@ -25,7 +26,6 @@ export(llm_vec_summarize)
 export(llm_vec_translate)
 export(m_backend_generate)
 export(m_backend_prompt)
-export(mall_init)
 import(cli)
 import(glue)
 import(rlang)
