--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ S3method(llm_sentiment,data.frame)
 S3method(llm_summarize,"tbl_Spark SQL")
 S3method(llm_summarize,data.frame)
 S3method(llm_translate,data.frame)
-S3method(m_backend_generate,ollama)
+S3method(m_backend_generate,mall_ollama)
 S3method(m_backend_prompt,mall_defaults)
 S3method(print,mall_defaults)
 export(llm_classify)
