Adds simulate_llm for examples and testing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(llm_summarize,"tbl_Spark SQL")
 S3method(llm_summarize,data.frame)
 S3method(llm_translate,data.frame)
 S3method(m_backend_generate,mall_ollama)
+S3method(m_backend_generate,mall_simulate_llm)
 S3method(m_backend_prompt,mall_defaults)
 S3method(print,mall_defaults)
 export(llm_classify)
