Attempts json output for extract

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ import(rlang)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,mutate)
 importFrom(dplyr,tibble)
+importFrom(jsonlite,fromJSON)
 importFrom(ollamar,generate)
 importFrom(ollamar,list_models)
 importFrom(ollamar,test_connection)
