--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,9 @@ S3method(llm_sentiment,data.frame)
 S3method(llm_summarize,"tbl_Spark SQL")
 S3method(llm_summarize,data.frame)
 S3method(llm_translate,data.frame)
-S3method(m_backend_generate,mall_ollama)
-S3method(m_backend_generate,mall_simulate_llm)
 S3method(m_backend_prompt,mall_defaults)
+S3method(m_backend_submit,mall_ollama)
+S3method(m_backend_submit,mall_simulate_llm)
 S3method(print,mall_defaults)
 export(llm_classify)
 export(llm_custom)
@@ -25,8 +25,8 @@ export(llm_vec_extract)
 export(llm_vec_sentiment)
 export(llm_vec_summarize)
 export(llm_vec_translate)
-export(m_backend_generate)
 export(m_backend_prompt)
+export(m_backend_submit)
 import(cli)
 import(glue)
 import(rlang)
