Starts switch of ollama call to chat, extends prompt to list

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,7 +34,7 @@ importFrom(dplyr,bind_cols)
 importFrom(dplyr,mutate)
 importFrom(dplyr,tibble)
 importFrom(jsonlite,fromJSON)
-importFrom(ollamar,generate)
+importFrom(ollamar,chat)
 importFrom(ollamar,list_models)
 importFrom(ollamar,test_connection)
 importFrom(utils,menu)
