Formally imports pull, updates ollamar function being used in docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ import(glue)
 import(rlang)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
 importFrom(dplyr,tibble)
 importFrom(jsonlite,fromJSON)
 importFrom(ollamar,chat)
