First draft of results tracking and reusing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(llm_vec_translate)
 export(m_backend_prompt)
 export(m_backend_submit)
 import(cli)
+import(fs)
 import(glue)
 import(rlang)
 importFrom(dplyr,bind_cols)
@@ -35,6 +36,8 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,tibble)
 importFrom(jsonlite,fromJSON)
+importFrom(jsonlite,read_json)
+importFrom(jsonlite,write_json)
 importFrom(ollamar,chat)
 importFrom(ollamar,list_models)
 importFrom(ollamar,test_connection)
