Uses example from site to see if the pkg is installed

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -43,11 +43,13 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
+          cache-version: 2
           extra-packages: |
             any::dbplyr
             any::rcmdcheck
-          needs: check
-
+          needs: |
+            check
+            
       - uses: r-lib/actions/check-r-package@v2
         with:
           upload-snapshots: true
