Forcing dbplyr installation using R script

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -43,12 +43,15 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          cache-version: 2
           extra-packages: |
-            any::dbplyr
             any::rcmdcheck
           needs: |
             check
+
+      - name: Installing dbplyr
+        run: |
+          pak::pak("dbplyr")
+        shell: Rscript {0}            
             
       - uses: r-lib/actions/check-r-package@v2
         with:
