Adds dbplyr to suggests, passes checks

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,7 @@ Imports:
     ollamar,
     rlang
 Suggests: 
+    dbplyr,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 URL: https://edgararuiz.github.io/mall/
