Rename l_vec_prompt, moves to its own script, ver bump, passes checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,4 +41,5 @@ importFrom(jsonlite,write_json)
 importFrom(ollamar,chat)
 importFrom(ollamar,list_models)
 importFrom(ollamar,test_connection)
+importFrom(utils,head)
 importFrom(utils,menu)
