Starts improvements to the session object

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,10 +8,10 @@ S3method(llm_sentiment,data.frame)
 S3method(llm_summarize,"tbl_Spark SQL")
 S3method(llm_summarize,data.frame)
 S3method(llm_translate,data.frame)
-S3method(m_backend_prompt,mall_defaults)
+S3method(m_backend_prompt,mall_session)
 S3method(m_backend_submit,mall_ollama)
 S3method(m_backend_submit,mall_simulate_llm)
-S3method(print,mall_defaults)
+S3method(print,mall_session)
 export(llm_classify)
 export(llm_custom)
 export(llm_extract)
