--- a/.github/workflows/quarto-site.yaml
+++ b/.github/workflows/quarto-site.yaml
@@ -14,4 +14,4 @@ jobs:
       with:
         target: gh-pages
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
