Adds missing steps

--- a/.github/workflows/quarto-site.yaml
+++ b/.github/workflows/quarto-site.yaml
@@ -3,12 +3,19 @@ on:
     branches: main
 name: Quarto site
 
-permissions: read-all
+permissions: write
 
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+      - name: Set up Quarto
+        uses: quarto-dev/quarto-actions/setup@v2
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
     - name: Publish to GitHub Pages (and render)
       uses: quarto-dev/quarto-actions/publish@v2
       with:
