--- a/.github/workflows/quarto-site.yaml
+++ b/.github/workflows/quarto-site.yaml
@@ -1,13 +1,16 @@
 on:
   push:
-    branches: main
-name: Quarto site
+    branches:
+      - main
+
+name: Render and Publish
 
 permissions: write
 
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
+    
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
