--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,3 +25,6 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 URL: https://edgararuiz.github.io/mall/
+Depends: 
+    R (>= 2.10)
+LazyData: true
