--- a/_quarto.yml
+++ b/_quarto.yml
@@ -25,8 +25,10 @@ website:
       background: light
       collapse-level: 2
       contents: 
+      - text: "Caching"
+        href: articles/caching.qmd
       - text: "Databricks"
-        href: articles/databricks.qmd
+        href: articles/databricks.qmd        
 
 format:
   html:
