Adds tests, fixes some failed checks items

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ import(rlang)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
+importFrom(dplyr,sql)
 importFrom(dplyr,tibble)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,read_json)
