--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(llm_sentiment,data.frame)
 S3method(llm_summarize,"tbl_Spark SQL")
 S3method(llm_summarize,data.frame)
 S3method(llm_translate,data.frame)
+S3method(m_backend_prompt,mall_llama3.2)
 S3method(m_backend_prompt,mall_session)
 S3method(m_backend_submit,mall_ollama)
 S3method(m_backend_submit,mall_simulate_llm)
