--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,6 +27,8 @@ website:
       contents: 
       - text: "Caching"
         href: articles/caching.qmd
+      - text: "Performance"
+        href: articles/performance.qmd                
       - text: "Databricks (R only)"
         href: articles/databricks.qmd        
 
