--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -2,11 +2,11 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches: main
+    branches: temp
   pull_request:
-    branches: main
+    branches: temp
 
-name: R-CMD-check.yaml
+name: R package checks
 
 permissions: read-all
 
