--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -43,6 +43,7 @@ jobs:
               )
           )
           covr::to_cobertura(cov)
+          print(list.files(recursive = TRUE, full.names = TRUE))
         shell: Rscript {0}
 
       - uses: codecov/codecov-action@v4
