Documents new function

--- a/r/NAMESPACE
+++ b/r/NAMESPACE
@@ -28,6 +28,7 @@ export(llm_vec_extract)
 export(llm_vec_sentiment)
 export(llm_vec_summarize)
 export(llm_vec_translate)
+export(llm_vec_verify)
 export(llm_verify)
 export(m_backend_prompt)
 export(m_backend_submit)
