--- a/.github/workflows/python-tests.yaml
+++ b/.github/workflows/python-tests.yaml
@@ -5,9 +5,9 @@ on:
     branches: main
   pull_request:
     branches: main
+    
 jobs:
-  build:
-
+  python-tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
