--- a/.github/workflows/python-tests.yaml
+++ b/.github/workflows/python-tests.yaml
@@ -6,9 +6,12 @@ on:
   pull_request:
     branches: main
     
+permissions: read-all
+
 jobs:
   python-tests:
     runs-on: ubuntu-latest
+    
     strategy:
       matrix:
         python-version: ["3.13"]
