--- a/.github/workflows/python-tests.yaml
+++ b/.github/workflows/python-tests.yaml
@@ -1,12 +1,14 @@
-name: Python package
+name: Python tests
 
-on: [push]
-
+on: 
+  push:
+    branches: main
+  pull_request:
+    branches: main
+    
 jobs:
-  build:
   python-tests:
     runs-on: ubuntu-latest
-    
     strategy:
       matrix:
         python-version: ["3.13"]
@@ -17,12 +19,11 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r python/requirements.txt
-    - name: Test with pytest
-      run: |
-        pip install pytest pytest-cov
-        pytest python --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
-        
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r python/requirements.txt
+      - name: Test with pytest
+        run: |
+          pip install pytest pytest-cov
+          pytest python --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
