--- a/.github/workflows/python-tests.yaml
+++ b/.github/workflows/python-tests.yaml
@@ -25,5 +25,4 @@ jobs:
           pip install -r python/requirements.txt
       - name: Test with pytest
         run: |
-          pip install pytest pytest-cov
-          pytest python --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+          pytest python 
