Re enables the rest of the jobs

--- a/.github/workflows/python-tests.yaml
+++ b/.github/workflows/python-tests.yaml
@@ -2,9 +2,9 @@ name: Python tests
 
 on: 
   push:
-    branches: temp
+    branches: main
   pull_request:
-    branches: temp
+    branches: main
     
 jobs:
   python-tests:
