--- a/r/DESCRIPTION
+++ b/r/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R: c(
   )
 Description: Run multiple 'Large Language Model' predictions against a table. The
     predictions run row-wise over a specified column. It works using a pre-determined
-    one-shot prompt, along with the current row's content. The prompt that is use 
+    one-shot prompt, along with the current row's content. The prompt that is used
     will depend of the type of analysis needed.
 License: MIT + file LICENSE
 Encoding: UTF-8
