Small change to description

--- a/r/DESCRIPTION
+++ b/r/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: c(
   person(given = "Posit Software, PBC", role = c("cph", "fnd"))
   )
 Description: Run multiple 'Large Language Model' predictions against a table. The
-    predictions run row-wise over a specified column. It works using a pre-determined
+    predictions run row-wise over a specified column. It works using a 
     one-shot prompt, along with the current row's content. The prompt that is used
     will depend of the type of analysis needed.
 License: MIT + file LICENSE
