--- a/r/DESCRIPTION
+++ b/r/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mall
-Title: Run multiple 'Large Language Model' predictions against a table, or 
-    vectors
+Title: Run Multiple Large Language Model Predictions Against a Table, or 
+    Vectors
 Version: 0.1.0
 Authors@R: c(
   person("Edgar", "Ruiz", , "edgar@posit.co", role = c("aut", "cre")),
