--- a/r/DESCRIPTION
+++ b/r/DESCRIPTION
@@ -17,6 +17,7 @@ RoxygenNote: 7.3.2
 Imports: 
     cli,
     dplyr,
+    elmer (>= 0.0.0.9000),
     fs,
     glue,
     jsonlite,
@@ -30,3 +31,5 @@ URL: https://mlverse.github.io/mall/
 Depends: 
     R (>= 2.10)
 LazyData: true
+Remotes:  
+    tidyverse/elmer
