--- a/r/NAMESPACE
+++ b/r/NAMESPACE
@@ -34,6 +34,7 @@ export(llm_verify)
 export(m_backend_prompt)
 export(m_backend_submit)
 import(cli)
+import(ellmer)
 import(fs)
 import(glue)
 import(rlang)
