--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "pytest>=8.3.3",
     "pytest-cov>=5.0.0",
     "pytest-html>=4.1.1",
-    "pytest-metadata>=3.1.1"
+    "pytest-metadata>=3.1.1",
+    "chatlas>=0.7.0"
 ]
 classifiers = [
     "Intended Audience :: End Users/Desktop",
