Avoids full import of ellmer

--- a/r/NAMESPACE
+++ b/r/NAMESPACE
@@ -34,7 +34,6 @@ export(llm_verify)
 export(m_backend_prompt)
 export(m_backend_submit)
 import(cli)
-import(ellmer)
 import(fs)
 import(glue)
 import(rlang)
@@ -43,6 +42,7 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,sql)
 importFrom(dplyr,tibble)
+importFrom(ellmer,parallel_chat_text)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,read_json)
 importFrom(jsonlite,write_json)
