--- a/r/NAMESPACE
+++ b/r/NAMESPACE
@@ -11,6 +11,7 @@ S3method(llm_summarize,data.frame)
 S3method(llm_translate,data.frame)
 S3method(llm_verify,data.frame)
 S3method(m_backend_prompt,mall_llama3.2)
+S3method(m_backend_prompt,mall_ollama)
 S3method(m_backend_prompt,mall_session)
 S3method(m_backend_submit,mall_ellmer)
 S3method(m_backend_submit,mall_ollama)
