adds method for ellmer connections, ensures all prompt functions return a character vector, and updates tests

--- a/r/NAMESPACE
+++ b/r/NAMESPACE
@@ -10,6 +10,7 @@ S3method(llm_summarize,"tbl_Spark SQL")
 S3method(llm_summarize,data.frame)
 S3method(llm_translate,data.frame)
 S3method(llm_verify,data.frame)
+S3method(m_backend_prompt,mall_ellmer)
 S3method(m_backend_prompt,mall_llama3.2)
 S3method(m_backend_prompt,mall_ollama)
 S3method(m_backend_prompt,mall_session)
